fix: html dark mode background

--- a/app/app.css
+++ b/app/app.css
@@ -12,9 +12,10 @@
 
 html,
 body {
-	@apply bg-amber-50 dark:bg-zinc-900;
+	@apply bg-amber-50;
 
 	@media (prefers-color-scheme: dark) {
+		@apply bg-zinc-900;
 		color-scheme: dark;
 	}
 }
